# packcapture

./: .gitattributes  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
assets/: README.md
sets/me2/: embeddings.npy  keypoints.npy  manifest.json  metadata.db
src/packcapture/: __init__.py  cli.py  config.py  devmode.py  mediautil.py  overlay.py  overlay_server.py
src/packcapture/api/: __init__.py  pokemontcg.py
src/packcapture/capture/: __init__.py  devices.py  source.py  threaded.py
src/packcapture/pipeline/: __init__.py  boundary.py  confidence.py  roi.py  runner.py  session.py  settle.py
src/packcapture/recognize/: __init__.py  features.py  orb_matcher.py
src/packcapture/setbuild/: __init__.py  builder.py  prices.py
src/packcapture/storage/: __init__.py  bundle.py
tests/: _synth.py  test_boundary.py  test_confidence.py  test_overlay.py  test_overlay_server.py  test_pipeline.py  test_real_footage.py  test_roi.py  test_runner.py  test_session.py  test_settle.py  test_threaded.py
tests/assets/: README.md
