[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "packcapture"
version = "0.1.0"
description = "Computer-vision card logger for Pokémon TCG pack openings"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
  "numpy>=1.23,<3",
  "opencv-python>=4.8",
  "requests>=2.28",
  "tqdm>=4.64",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
packcapture = "packcapture.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
